# portrait

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  flake.nix
nix/: inputs.nix
nix/services/portrait-server/: default.nix  option.nix  swag.nix
server/: Cargo.toml
server/src/: main.rs
www/: code.js  index.html  llms.txt  monospace.css  robots.txt  sitemap.xml  style.css  terminal.js
www/commands/: contact.html  education.html  experience.html  help.html  homeserver.html  mandelbrot.html  message.html  projects.html  rubiks.html  skills.html  uttt.html  whoami.html
www/js/: clickable-commands.js  command-execution.js  inactivity-timer.js  input-handling.js  intro-animation.js  shardify.js  tab-completion.js  terminal-utils.js  terminal.js
