[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
